2022-12-27         [RELEASE] Release of filefill 4.2.0 (Nicole Cordes)
2022-12-27 a846dd5 [TASK] Add functional tests for reset command (Nicole Cordes)
2022-12-27 df9ce0e [TASK] Add functional tests for delete command (Nicole Cordes)
2022-12-27 9c53b21 [BUGFIX] Use correct column identifier for array_column (Nicole Cordes)
2022-12-27 4018355 [BUGFIX] Use filePath as unique file cache identifier (Nicole Cordes)
2022-12-27 9207fbf [TASK] Add second file storage to test fixtures (Nicole Cordes)
2022-12-24 bbfc451 Add console commands to Services.yaml file (Thomas Löffler)
2022-11-21 77e33e3 [TASK] Add functional tests for image builder resource handler (Nicole Cordes)
2022-11-18 08c3205 [FEATURE] Add image builder as resource target (Nicole Cordes)
2022-12-25 1f8f7c0 [TASK] Raise compatibility to TYPO3 12.1 (Nicole Cordes)
2022-12-22 21cd7b9 [TASK] Migrate to typo3/testing-framework 6.x (Nicole Cordes)
2022-11-21 3a1d94c [BUGFIX] Show unknown identifier as plain text in storage record view (Nicole Cordes)
2022-11-21 8046e8f [TASK] Stabilize functional tests (Nicole Cordes)
2022-11-21 32f00f2 [TASK] Add functional tests for static resource handler (Nicole Cordes)
2022-11-18 b3c2d68 [BUGFIX] Fix placeholder resource handler (Nicole Cordes)
2022-11-18 7001e49 [TASK] Allow TYPO3 composer plugins (Nicole Cordes)

2022-05-05         [RELEASE] Release of filefill 4.1.1 (Nicole Cordes)
2022-05-05 35f26c2 [TASK] Update supporting files to EXT:my_skeleton 0.7.1 (Nicole Cordes)
2022-05-05 f749705 [BUGFIX] Use correct namespace for DomainResource (Nicole Cordes)
2022-04-11 04d6f1b [TASK] Use correct branch name in README.md (Nicole Cordes)

2022-04-11         [RELEASE] Release of filefill 4.1.0 (Nicole Cordes)
2022-04-11 d09f519 [FEATURE] Handle TypoScript configuration for StaticFileResource (Nicole Cordes)
2022-02-17 e99b09a [FEATURE] Add static file handling as resource target (Nicole Cordes)
2022-02-17 b01207b [TASK] Move resource handler to proper folder (Nicole Cordes)